<resources>
    <string name="app_name">HelpTree</string>
    <string name="treendfo">e-Treendfo</string>
    <string name="bookmark">Bookmark</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo">Ambil Foto</string>
    <string name="go_chat">Ke Chat</string>
    <string name="camera_act">Ambil Gambar</string>
    <string name="tv_chat">Konsultasi</string>
    <string-array name="title">
        <item>3 Tanaman Hidroponik yang mudah ditanam</item>
        <item>7 Cara Merawat Tumbuhan agar Tidak Layu</item>
        <item>Cara Membuat Pupuk dari Sampah Dapur</item>
        <item> Ingin Dapat Hasil Panen Yang Melimpah? Simak Tips Ini!</item>
        <item>Upaya Yang Bisa Dilakukan Petani Untuk Meningkatkan Hasil Pertanian</item>
    </string-array>
    <string name="Btn_back">kembali</string>
    <string name="camera_caption">Berdasarkan Gambar yang diambil tumbuhan anda terindikasi :</string>
    <string name="disease_name">Nama Penyakit</string>
    <string name="description">Deskripsi</string>
    <string name="Btn_Solution">Temukan Solusi</string>
    <string name="resImage">ImageResult</string>
    <string name="line">line</string>
    <string name="bt_reset">Reset</string>
    <string name="bt_info">Info</string>
    <string name="bt_selectimg">Select</string>
    <string name="bt_predictimg">Predict</string>
    <string name="title_activity_chatbot">ChatbotActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tvpred">Nama Penyakit</string>
    <string name="placeholder_detail">Pilih foto klik SELECTlalu klik PREDICT untuk mendapatkan hasil prediksi</string>
    <string name="information">Informasi</string>
    <string name="narationApp">
        Aplikasi HelpTree merupakan aplikasi yang digunakan untuk mempermudah para pertani untuk
        menemukan solusi dari penyakit yang dialami oleh tumbuhan. Aplikasi ini memuat fitur
        deteksi gambar dan konsultasi menggunakan chatbot.\n \n

        📷 Cara menggunakan deteksi gambar dengan memasukkan gambar dari Album/Gallery ke dalam aplikasi.
        \n 💬 Utuk konsultasi dapat klik ikon konsultasi dan mari berbagi cerita mu bersama Tria
    </string>
    <string name="developer">Tentang Developer</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="photo_developer">Photo Developer</string>
    <string name="aboutDevelop">tentangDeveloper</string>
    <string name="icon">icon</string>
    <string-array name="nama_dev">
        <item>M. Ilhamsyah (A3142813)</item>
        <item>Meutia Khairiyah (A1281624)</item>
        <item>Irfan Rahadi K. (M0101130)</item>
        <item>Rivaldo Marta (M0101131)</item>
        <item>Aqilarik N.R (C2192108)</item>
        <item>Annisa Nurjanah (C3142812)</item>
    </string-array>
    <string-array name="path_dev">
        <item>Mobile Development</item>
        <item>Mobile Development</item>
        <item>Machine Learning</item>
        <item>Machine Learning</item>
        <item>Cloud Computing</item>
        <item>Cloud Computing</item>
    </string-array>
    <string-array name="photo_dev">
        <item>@drawable/ailham</item>
        <item>@drawable/ameu</item>
        <item>@drawable/airfan</item>
        <item>@drawable/fotovaldo</item>
        <item>@drawable/aqil</item>
        <item>@drawable/annisa</item>
    </string-array>
    <string-array name="url_link">
        <item>https://www.99.co/blog/indonesia/contoh-tanaman-hidroponik/</item>
        <item>https://www.popbela.com/career/inspiration/firly-fenti/cara-merawat-tanaman-agar-tidak-layu/7</item>
        <item>https://www.popmama.com/life/home-and-living/sittah-husnul-khotimah/cara-membuat-pupuk-organik-dari-sampah-dapur-1/3</item>
        <item> https://sahabatpetani.com/pengen-dapat-hasil-panen-yang-melimpah-simak-4-tips-bertani-dari-sahabat-petani/</item>
        <item>https://www.berdesa.com/upaya-yang-bisa-dilakukan-petani-untuk-meningkatkan-hasil-pertanian/</item>
    </string-array>
    <string-array name="photoArtikel">
        <item>@drawable/salada</item>
        <item>@drawable/tanam2</item>
        <item>@drawable/pupuk</item>
        <item>@drawable/melimpah</item>
        <item>@drawable/bertani</item>
    </string-array>
</resources>