<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.picture.TakePictureActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="#B3B2B2"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/result_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/resImage" />
        <!--            android:src="@tools:sample/avatars"-->
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/Btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/pathwaygothicone"
        android:text="@string/camera_caption"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <TextView
        android:id="@+id/tv_prediction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/caveatbrushregular"
        android:text="@string/disease_name"
        android:textColor="#82B385"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:foregroundGravity="center"
        app:cardBackgroundColor="#C8DEC5"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_prediction" >

        <TextView
            android:id="@+id/tv_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:justificationMode="inter_word"
            android:padding="8dp"
            android:text="@string/placeholder_detail"
            android:textSize="14sp"
            tools:ignore="UnusedAttribute" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_solusi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/pathwaygothicone"
        android:text="@string/Btn_Solution"
        android:textColor="#000000"
        android:theme="@style/Button.Green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/caveatbrushregular"
        android:text="@string/description"
        android:textColor="#A4C2A0"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_prediction" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/ic_line"
        android:contentDescription="@string/line" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="34dp"
        android:text="@string/bt_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_solusi"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    <Button
        android:id="@+id/btn_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="8dp"
        android:text="@string/bt_selectimg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <Button
        android:id="@+id/btn_predict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="46dp"
        android:text="@string/bt_predictimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <ImageView
        android:id="@+id/btn_info_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_info_24" />

    <ImageButton
        android:id="@+id/btn_cam"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/btn_predict"
        app:layout_constraintStart_toEndOf="@+id/btn_select"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:srcCompat="@drawable/ic_camera" />
</androidx.constraintlayout.widget.ConstraintLayout>